# Cpp-CMake-Project-Template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  _CMakeLists.txt  accessions.ods  content.xml
OdfReader/inc/: main.h
OdfReader/src/: CMakeLists.txt  main.cpp
rapidxml-1.13/: CMakeLists.txt
src/: main.cpp
